<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skd1_gz</name>
  <version>1.0.0</version>
  <description>SKD-1 simulation using Gazebo</description>
  <maintainer email="gsanchez@sinc.unl.edu.ar">Guido Sanchez</maintainer>
  <maintainer email="acapovilla@sinc.unl.edu.ar">Agustin Capovilla</maintainer>
  
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>skd1_description</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
